--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "axios-mock-adapter": "1.17.0",
     "babel-jest": "25.1.0",
     "babel-loader": "8.1.0",
+    "css-loader": "5.0.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.18.3",
+    "file-loader": "6.1.1",
     "jest": "25.1.0",
     "react-test-renderer": "16.12.0",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
+    "style-loader": "2.0.0",
     "webpack": "4.41.6",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.10.3"
@@ -39,6 +42,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "history": "4.10.1",
+    "leaflet": "^1.7.1",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
