--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,8 @@ env:
   es6: true
   browser: true
   commonjs: true
+  node: true
+  jest: true
 
 extends: ["htmlacademy/es6", "plugin:react/recommended"]
 
@@ -17,6 +19,12 @@ settings:
   react:
     version: "16"
 
+rules: {
+  react/sort-comp: [2]
+}
+
 globals:
   React: true
   PropTypes: true
+  renderer: true
+
